<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_white"
    android:paddingHorizontal="15dp"
    tools:context=".ui.PermissionScreenActivity">


    <!--Information icon-->
    <ImageView
        android:id="@+id/info_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/info_icon"
        android:src="@drawable/ic_info_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000000"
        tools:ignore="ImageContrastCheck" />

    <!--    How to use text-->
    <TextView
        android:id="@+id/howToUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/how_to_use"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/info_icon"
        app:layout_constraintStart_toStartOf="@+id/info_icon"
        app:layout_constraintTop_toBottomOf="@+id/info_icon" />


    <!--    guidelines....-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94" />


    <!--arrow....-->
    <ImageView
        android:id="@+id/arrow1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/line1"
        app:layout_constraintVertical_bias="0.0" />


    <!--    first paragraph-->
    <TextView
        android:id="@+id/line1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins"
        android:text="@string/check"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/howToUse" />

    <!--arrow....-->
    <ImageView
        android:id="@+id/arrow2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/line2"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/line2"
        app:layout_constraintVertical_bias="0.0" />


    <!--    second paragraph-->
    <TextView
        android:id="@+id/line2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/come_back"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/line1" />



    <!--arrow....-->
    <ImageView
        android:id="@+id/arrow3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/line3"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/line3"
        app:layout_constraintVertical_bias="0.0" />

    <!--    third paragraph-->
    <TextView
        android:id="@+id/line3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:text="@string/multiple"
        android:textColor="@color/light_black"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        app:layout_constraintVertical_bias="0.0" />



    <!--i understand button-->


    <Button
        android:id="@+id/understand"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/themeColor"
        android:text="@string/understand"
        android:fontFamily="@font/poppins_medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:icon="@drawable/ic_done_icon"
        app:iconGravity="textStart"
        app:iconTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
